[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/door.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/door_redvertical.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/door_redhorizontal.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 8 )

[node name="Door" type="StaticBody2D" groups=[
"doors",
]]
script = ExtResource( 1 )

[node name="VertSprite" type="Node2D" parent="."]

[node name="UpperHalf" type="Sprite" parent="VertSprite"]
z_index = 3
texture = ExtResource( 2 )
offset = Vector2( 0, -20 )
region_enabled = true
region_rect = Rect2( 0, -40, 64, 40 )

[node name="LowerHalf" type="Sprite" parent="VertSprite"]
z_index = 1
texture = ExtResource( 2 )
offset = Vector2( 0, 20 )
region_enabled = true
region_rect = Rect2( 0, 40, 64, 40 )

[node name="HorSprite" type="Node2D" parent="."]
visible = false

[node name="UpperHalf" type="Sprite" parent="HorSprite"]
z_index = 3
texture = ExtResource( 3 )
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 0, 8, 64, 16 )

[node name="LowerHalf" type="Sprite" parent="HorSprite"]
z_index = 1
texture = ExtResource( 3 )
offset = Vector2( 0, 8 )
region_enabled = true
region_rect = Rect2( 0, 24, 64, 32 )

[node name="VertCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="HorCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
